--- a/wled-native/fr-CA.lproj/InfoPlist.strings
+++ b/wled-native/fr-CA.lproj/InfoPlist.strings
@@ -1,1 +1,1 @@
-NSLocalNetworkUsageDescription = "WLED Native utilise le réseau local pour découvrir les appareils autour de vous.";
+NSLocalNetworkUsageDescription = "WLED utilise le réseau local pour découvrir les appareils autour de vous.";
